# JuMPy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  juliac.yml
examples/: basic.py
julia/: Manifest.toml  Project.toml  README.md  juliac_entry.jl  trim_dispatch.jl  workload.jl
julia/src/: JuMPyHiGHS.jl
julia/test/: runtests.jl
src/jumpy/: __init__.py  backend.py  backend_vroom.py  bridge_juliacall.py  expressions.py  model.py  mof_export.py  serialize.py  vrp.py  vrp_export.py
tests/: mock_ops.py  test_MILP.py  test_backend.py  test_expressions.py  test_mof.py  test_solve.py  test_vrp_export.py
