[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jumpy"
version = "0.1.0"
description = "A Python interface to JuMP's MathOptInterface via GeneratorOptInterface"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.optional-dependencies]
juliacall = ["juliacall>=0.9.23"]

[dependency-groups]
tests = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/jumpy"]
